# chinatxtbook-cli

./: .gitignore  01_PRD_产品需求说明书_v1.1.docx.txt  04_功能矩阵与验收清单_v1.1.xlsx  2.1_系统总体架构设计_v1.1.docx  2.4_状态机与异常恢复设计_完整版_v1.1.txt  2.5_Git下载与更新流程设计_完整版_v1.1.docx  2.6_后台任务日志与配置设计_完整版_v1.1.docx  3.4_发布交付与回滚清单_完整版_v1.1.docx  CHANGELOG.md  ChinaTextbook_v1.1_3.2_详细测试用例与验收清单.xlsx  ChinaTextbook_v1.1_UI_UX原型设计规范.docx  ChinaTextbook_v1.1_软件设计说明书(SDS).docx  LICENSE  README.md  README_v1.0.md  _check_paths.py  _temp_docx_output.txt  chinatxtbook-cli-audit.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: 01_PRD_产品需求说明书_v1.1.docx  02_产品信息架构与用户流程_v1.1.docx  02_产品信息架构与用户流程_v1.1.docx.txt  03_UI_UX核心界面与交互规范_v1.1.docx  03_UI_UX核心界面与交互规范_v1.1.docx.txt  2.1_系统总体架构设计_v1.1.docx.txt  2.2_模块设计说明_完整版_v1.1.docx  2.3_数据模型与状态文件设计_完整版_v1.1.docx  2.4_状态机与异常恢复设计_完整版_v1.1.docx  2.5_Git下载与更新流程设计_完整版_v1.1.txt  2.7_SDS汇总与开发实施规范_完整版_v1.1.docx  3.1_测试与验收规范_完整版_v1.1.docx  ChinaTextbook_v1.1_3.3_开发WBS与里程碑计划.xlsx  ChinaTextbook_v1.1_开发需求说明书.docx
schemas/: app-state.schema.json
scripts/: build_exe.py
src/chinatxtbook/: __init__.py  __main__.py  cli.py  config.py
src/chinatxtbook/core/: catalog.py  downloader.py  evaluator.py  git_client.py  manifest.py  merger.py  reporter.py  state.py
src/chinatxtbook/models/: __init__.py  (+4 more)
tests/: conftest.py
tests/core/: test_downloader.py  test_evaluator.py  test_git_client.py  test_manifest.py  test_merger.py  test_state.py
tests/ui/: test_book_list.py
tests/utils/: test_format.py  test_lockfile.py  test_paths.py
(+26 files in other folders)
