[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china-textbook"
version = "1.1.1"
description = "Chinese textbook PDF batch downloader with Textual TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "raymondyan", email = "raymondyan@gmail.com"},
]
dependencies = [
    "textual>=0.52.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.10",
    "pyinstaller>=6.0",
    "build>=1.0",
]

[project.scripts]
china-textbook = "chinatxtbook.__main__:main"

[project.urls]
Homepage = "https://github.com/raymondyan-zhijie/chinatxtbook-cli"
Repository = "https://github.com/raymondyan-zhijie/chinatxtbook-cli.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chinatxtbook = ["schemas/*.json", "ui/*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
